examples/rust/failing/new_derive_attr/ExpectedCurrently.rs
<<<<<<< LEFT
#[derive(Debug)]
||||||| BASE
=======
#[derive(Clone)]
>>>>>>> RIGHT
struct Foo;
